--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,9 +1,14 @@
 .price {
   position: relative;
+
+  height: 36px;
+  overflow: hidden;
 }
 
 .price__sell {
   @include MD-reset();
+
+  margin-bottom: 4px;
 
   font-weight: 500;
   font-size: 16px;
@@ -13,9 +18,13 @@
 }
 
 .price__old {
-  position: absolute;
-  top: 6px;
-  left: 82px;
+  // position: absolute;
+  // top: 6px;
+  // left: 82px;
+  @include MD-reset();
+
+  padding-right: 30px;
+  padding-left: 30px;
 
   font-weight: 400;
   font-size: 14px;
